# interoperability-of-skills-frameworks-ariane

./: .gitignore  .npmrc  .sops.yaml  README.md  definitions.d.ts  harish123.asc.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
_docs/: CloudRun-http-authnz.md  (+8 more)
services/ontobridgeApi/: .env  .env.template  alembic.ini  docker-compose.yml  jobready_2_expected_data  minutes.md  pyproject.toml  readme.md
services/ontobridgeApi/api/: config.py  database.py  main.py  readme.md
services/ontobridgeApi/api/models/: __init__.py  data_provider.py  embedding_payload.py  term_matching_payload.py
services/ontobridgeApi/api/routers/: __init__.py  machine_learning.py  onto_bridge.py  ontology.py  term_matching.py
services/ontobridgeApi/containers/: api-Dockerfile
services/ontobridgeApi/machine_learning_engine/: embeddings.py
services/ontobridgeApi/ontology_engine/: README.md  document_tree.py  providers.py  rule.py  rule_engine.py  tools.py
services/ontobridgeApi/ontology_engine/models/: testclass.py
services/ontobridgeApi/ontology_engine/ressources/: general-remarques.md  model.yaml
services/ontobridgeApi/term_matching_engine/: create_or_find_mapping_by_gql_test.py  create_or_find_term_by_gql_test.py  create_or_find_term_test.py  gql_functions.json  graphql_helper.py  source_mapping_engine.py  term_matching_engine.py
services/ontobridgeApi/tests/: basic_test.py  create_or_find_mapping_by_gql_test.py  create_or_find_term_by_gql_test.py  document_tree_test.py  graph_content_check.py  graph_q_test.py  ontology_test.py  test_tools.py  transformation_test.py
(+447 files in other folders)
