[tool.poetry]
name = "ontobridgeapi"
version = "0.1.0"
description = "api to transform documents into universal ontology"
authors = ["Hugo Victor"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
