[tool.poetry]
name = "ontobridgeapi"
version = "0.1.0"
description = "API to transform documents into universal ontology"
authors = ["Hugo Victor"]

packages = [
    { include="api", from="." },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
fastapi-utils = "^0.6.0"
alembic = "^1.13.1"
redis = "^5.0.4"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
pydantic = "<2.0.0"
black = "^24.4.2"
jsonpath-ng = "^1.6.1"
pytest = "^8.2.0"
requests = "^2.32.2"
sentence-transformers = "^3.0.0"
torch = "^2.3.0"
protobuf = "^5.27.0"
sentencepiece = "^0.2.0"

gql = "^3.5.0"
inquirer = "^3.2.4"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "api.main:start_dev"

[tool.black]
line-length = 128
